force-app/main/default/objects/Fee_Master__c/Fee_Master__c.object-meta.xml
<CustomObject>
    <description>Object used to manage various fee types withing REVA</description>
    <label>Fee Master</label>
    <nameField>
        <displayFormat>FM-{00000}</displayFormat>
        <label>Fee Master Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fee Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>