force-app/main/default/objects/Fee_Master__c/fields/Applicant_Category__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Category__c</fullName>
    <description>Fee category of the applicant</description>
    <inlineHelpText>Fee category of the applicant</inlineHelpText>
    <label>Applicant Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indian (SAARC)</fullName>
            </value>
            <value>
                <fullName>Non-Resident Indian(NRI)</fullName>
            </value>
            <value>
                <fullName>Foreign Nationals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>