force-app/main/default/objects/Fee_Master__c/fields/Application_Number_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Application_Number_Prefix__c</fullName>
    <description>Prefix for the generated application number</description>
    <inlineHelpText>Prefix for the generated application number</inlineHelpText>
    <label>Application Number Prefix</label>
    <length>6</length>
    <type>Text</type>
</CustomField>