force-app/main/default/objects/Fee_Master__c/fields/Current_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Current_Sequence_Number__c</fullName>
    <description>Current Sequence Number</description>
    <formula>Sequence_Number__r.Integer_Five__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Current Sequence Number</inlineHelpText>
    <label>Current Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>