force-app/main/default/objects/Fee_Master__c/fields/Enrolment_Year__c.field-meta.xml
<CustomField>
    <fullName>Enrolment_Year__c</fullName>
    <description>Enrollment year this fee belongs to</description>
    <inlineHelpText>Enrollment year this fee belongs to</inlineHelpText>
    <label>Enrolment Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>