force-app/main/default/objects/Fee_Master__c/fields/Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fee_Amount__c</fullName>
    <description>Amount of the fee</description>
    <inlineHelpText>Amount of the fee</inlineHelpText>
    <label>Fee Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>