force-app/main/default/objects/Fee_Master__c/fields/Fee_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Fee_Remarks__c</fullName>
    <description>Explanatory remarks for the fee</description>
    <inlineHelpText>Explanatory remarks for the fee</inlineHelpText>
    <label>Fee Remarks</label>
    <type>TextArea</type>
</CustomField>