force-app/main/default/objects/Fee_Master__c/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <description>What type of fee is this?</description>
    <inlineHelpText>What type of fee is this?</inlineHelpText>
    <label>Fee Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application Fee</fullName>
            </value>
            <value>
                <fullName>University Fee</fullName>
            </value>
            <value>
                <fullName>Program Fee</fullName>
            </value>
            <value>
                <fullName>Final Year Special Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>