force-app/main/default/objects/Fee_Master__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether the Fee Master record is Active or not.</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>