force-app/main/default/objects/Fee_Master__c/fields/Program_Batch__c.field-meta.xml
<CustomField>
    <fullName>Program_Batch__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Which program batch is this fee applicable to</description>
    <inlineHelpText>Which program batch is this fee applicable to</inlineHelpText>
    <label>Program Batch</label>
    <referenceTo>hed__Program_Plan__c</referenceTo>
    <relationshipLabel>Fee Masters</relationshipLabel>
    <relationshipName>Fee_Masters</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>