force-app/main/default/objects/Fee_Master__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <description>Academic Program Name</description>
    <formula>Program_Batch__r.hed__Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Academic Program Name</inlineHelpText>
    <label>Program Name</label>
    <type>Text</type>
</CustomField>