force-app/main/default/objects/Fee_Master__c/fields/Program_Name_Display__c.field-meta.xml
<CustomField>
    <fullName>Program_Name_Display__c</fullName>
    <inlineHelpText>Program name to be displayed on the applicant registration screen</inlineHelpText>
    <label>Program Name (Display)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>