force-app/main/default/objects/Fee_Master__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <description>Type of this academic program</description>
    <formula>TEXT(Program_Batch__r.hed__Account__r.Program_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Type of this academic program</inlineHelpText>
    <label>Program Type</label>
    <type>Text</type>
</CustomField>