force-app/main/default/objects/Fee_Master__c/fields/Quota__c.field-meta.xml
<CustomField>
    <fullName>Quota__c</fullName>
    <description>Describes the type of Quota for the Fee</description>
    <label>Quota</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UQ</fullName>
            </value>
            <value>
                <fullName>CET</fullName>
            </value>
            <value>
                <fullName>ComedK</fullName>
            </value>
            <value>
                <fullName>DCET</fullName>
            </value>
            <value>
                <fullName>PGCET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>