force-app/main/default/objects/Fee_Master__c/fields/School_Name__c.field-meta.xml
<CustomField>
    <fullName>School_Name__c</fullName>
    <description>School (University Department) Name</description>
    <formula>Program_Batch__r.hed__Account__r.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>School (University Department) Name</inlineHelpText>
    <label>School Name</label>
    <type>Text</type>
</CustomField>