force-app/main/default/objects/Fee_Master__c/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Required for Application Fee type fee master records</description>
    <inlineHelpText>Required for Application Fee type fee master records</inlineHelpText>
    <label>Sequence Number</label>
    <referenceTo>Sequence_Number__c</referenceTo>
    <relationshipLabel>Fee Masters</relationshipLabel>
    <relationshipName>Fee_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>