force-app/main/default/objects/Fee_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fee_Type__c</columns>
    <columns>Fee_Amount__c</columns>
    <columns>Applicant_Category__c</columns>
    <columns>Program_Batch__c</columns>
    <columns>Current_Sequence_Number__c</columns>
    <columns>Program_Name_Display__c</columns>
    <columns>Program_Name__c</columns>
    <columns>School_Name__c</columns>
    <columns>IsActive__c</columns>
    <columns>Application_Number_Prefix__c</columns>
    <columns>Quota__c</columns>
    <columns>Enrolment_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>