force-app/main/default/objects/Fee_Master__c/listViews/All_University_and_Program_Fee.listView-meta.xml
<ListView>
    <fullName>All_University_and_Program_Fee</fullName>
    <columns>NAME</columns>
    <columns>Fee_Type__c</columns>
    <columns>Applicant_Category__c</columns>
    <columns>Fee_Amount__c</columns>
    <columns>Program_Name__c</columns>
    <columns>Program_Batch__c</columns>
    <columns>Program_Name_Display__c</columns>
    <columns>IsActive__c</columns>
    <columns>School_Name__c</columns>
    <columns>Quota__c</columns>
    <columns>Enrolment_Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fee_Type__c</field>
        <operation>equals</operation>
        <value>University Fee,Program Fee</value>
    </filters>
    <filters>
        <field>Quota__c</field>
        <operation>equals</operation>
        <value>CET</value>
    </filters>
    <filters>
        <field>Program_Batch__c</field>
        <operation>contains</operation>
        <value>2024-</value>
    </filters>
    <label>CET - University and Program Fee</label>
</ListView>