force-app/main/default/objects/Fee_Master__c/listViews/Comedk_Fee_Master.listView-meta.xml
<ListView>
    <fullName>Comedk_Fee_Master</fullName>
    <columns>NAME</columns>
    <columns>Fee_Type__c</columns>
    <columns>Fee_Amount__c</columns>
    <columns>Applicant_Category__c</columns>
    <columns>Program_Batch__c</columns>
    <columns>Current_Sequence_Number__c</columns>
    <columns>Program_Name_Display__c</columns>
    <columns>Program_Name__c</columns>
    <columns>School_Name__c</columns>
    <columns>IsActive__c</columns>
    <columns>Application_Number_Prefix__c</columns>
    <columns>Quota__c</columns>
    <columns>Enrolment_Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Quota__c</field>
        <operation>equals</operation>
        <value>ComedK</value>
    </filters>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Comedk Fee Master</label>
    <sharedTo>
        <group>ICT_Admin_Team</group>
    </sharedTo>
</ListView>