force-app/main/default/objects/Fee_Master__c/listViews/DCET_Fee_Master.listView-meta.xml
<ListView>
    <fullName>DCET_Fee_Master</fullName>
    <columns>NAME</columns>
    <columns>Enrolment_Year__c</columns>
    <columns>Fee_Amount__c</columns>
    <columns>Fee_Type__c</columns>
    <columns>IsActive__c</columns>
    <columns>Program_Batch__c</columns>
    <columns>Program_Name_Display__c</columns>
    <columns>Quota__c</columns>
    <columns>School_Name__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Quota__c</field>
        <operation>equals</operation>
        <value>DCET</value>
    </filters>
    <label>DCET Fee Master</label>
</ListView>